feat: add Response Inspector & HSTS Inspector extensions, sensitive pattern skill, and UI enhancements
- Add ResponseInspector_littlespidy extension:
  - 5 tabs: Welcome Guide, Passwords, PII & Server Paths, Errors & Exceptions, Secrets & Tokens
  - Multi-threaded proxy history ingestion pool (bounded ExecutorService)
  - Two-Stage Refiner Regex engine for cloud buckets and tokens
  - Secret Type, HTTP Status, Method, and MIME multi-select filter controls
  - TSV findings export, row pinning, and 4-pillar auto-navigation/deep-linking
  - Unit test suite (JUnit 5) and pre-compiled extension JAR
- Add HSTSInspector_littlespidy extension with pre-compiled JAR
- Add sensitive-pattern-extractor agent skill with centralized patterns.md reference
- Enhance CSP Inspector, Cache Inspector, and JS SourceMap Explorer with MultiSelectFilterButton controls and triage filtering
- Update root and extension documentation